--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Yonghui Lee"
+title                    : "Yonghui Lee/HHH"
 title_separator          : "-"
 name                     : &name "Yonghui Lee"
 description              : &description "personal description"
